--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: realworld
+  jpa:
+    hibernate:
+      ddl-auto: none
+    open-in-view: false
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:real-world-main;MODE=MYSQL;DB_CLOSE_DELAY=-1
