--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  jpa:
+    hibernate:
+      ddl-auto: none
+    open-in-view: false
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:real-world-test;MODE=MYSQL;DB_CLOSE_DELAY=-1
